:art: add zk source provider example
Module [kratos]:
  * ClasspathSourceProvider.java
  - BasicOptions.java
  - PropertiesOptions.java
  - RawPropertiesOptions.java
  - RawStringOptions.java
  - RuleTextOptions.java
  - RuleTextOptions2.java
  * DefaultOptions.java
  * DefaultOptions2.java
  - TextOptions.java
  * ZkSourceProvider.java
  * Constants.java
  * Bytes.java
  * ConfUtils.java
  + ZkConfigInjectorTest.java
  * SourceTest.java
  * Configurable.java
  * org.zhenchao.kratos.source.provider.SourceProvider
  * raw.properties
  * README.md
  * pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>4.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- unit test -->
         <dependency>
             <groupId>org.mockito</groupId>
